# VideoStreamer

./: .gitignore  CMakeLists.txt
config/: videoConfigure.yaml
include/: logger.hpp  metadata.hpp  receiver.hpp  sender.hpp  tcp_receiver.hpp  tcp_sender.hpp  udp_receiver.hpp  udp_sender.hpp  video_receiver.hpp  video_sender.hpp  video_sendler.hpp
src/: logger.cpp  main.cpp  main_receiver.cpp  main_sender.cpp  metadata.cpp  tcp_receiver.cpp  tcp_sender.cpp  udp_receiver.cpp  udp_sender.cpp  video_receiver.cpp  video_sender.cpp  video_sendler.cpp
